<resources>
    <string name="app_name">FirstProject</string>
    <string name="helloworld">Hello %1$s !</string>
    <string name="button">Say Hello</string>
    <string name="firstname">First Name:</string>
    <string name="edit_firstname">Enter your First Name</string>
    <string name="files">Samba Files</string>
    <string name="title_deuxieme_activite">SecondActivity</string>
    <string name="preferences">Preferences</string>
    <string name="firstname_key" translatable="false">firstname_key</string>
    <string name="clean">Clean</string>
    <string name="path">Path</string>
    <string name="server_path" translatable="false">server_path</string>
    <string name="edit_path">Edit the path</string>
    <string name="userpwd_auth" translatable="false">userpwd_auth</string>
    <string name="auth">Authentication</string>
    <string name="edit_auth">Edit the authentication</string>
    <string name="server">Remote-Server</string>
    <string name="backup">Backup</string>
    <string name="backup_status">Backup : %1$s</string>
    <string name="failed">Failed</string>
    <string name="checkBoxPref" translatable="false">checkBoxPref</string>
    <string name="anonymousOff">Anonymous Disabled</string>
    <string name="anonymousOn">Anonymous Connection</string>
    <string name="anonymous">Anonymous</string>
    <string name="default_server_path" translatable="false">smb://livebox/usbkey/</string>
    <string name="default_auth" translatable="false">user:pwd</string>
</resources>
