<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:dialogTitle="@string/firstname"
        android:key="@string/firstname_key"
        android:negativeButtonText="@android:string/cancel"
        android:positiveButtonText="@android:string/ok"
        android:summary="@string/edit_firstname"
        android:title="@string/firstname" />
    <PreferenceCategory android:title="@string/server">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="checkBoxPref"
            android:summaryOff="Anonymous Connection"
            android:summaryOn="Anonymous"
            android:title="Anonymous" />
        <!-- manage the dependency -->
        <!-- ##################### -->
        <EditTextPreference
            android:dialogTitle="@string/path"
            android:key="@string/server_path"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/edit_path"
            android:title="@string/path" />
        <EditTextPreference
            android:dialogTitle="@string/auth"
            android:key="@string/userpwd_auth"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/edit_auth"
            android:title="@string/auth" />
    </PreferenceCategory>
</PreferenceScreen>